--- a/AAA/Base.lproj/LaunchScreen.storyboard
+++ b/AAA/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="The cat feet" translatesAutoresizingMaskIntoConstraints="NO" id="xDk-Us-NSs">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bap-1" translatesAutoresizingMaskIntoConstraints="NO" id="xDk-Us-NSs">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -35,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="The cat feet" width="640" height="1136"/>
+        <image name="bap-1" width="887" height="1199"/>
     </resources>
 </document>
